<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>mcts4j-sample</name>
    <groupId>dev.macrobug</groupId>
    <artifactId>myMcts4J</artifactId>
    <version>1.0-SNAPSHOT</version>
    <contributors>
        <contributor>
            <name>Davide Rizzi</name>
            <roles>
                <role>developer</role>
            </roles>
        </contributor>
    </contributors>
    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.github.nejc92</groupId>
            <artifactId>mcts</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>uk.com.robust-it</groupId>
            <artifactId>cloning</artifactId>
            <version>1.9.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <licenses>
        <license>
            <name>GNU General Public License version 3</name>
            <url>http://www.gnu.org/licenses/</url>
        </license>
    </licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
